--- a/stylesheet.css
+++ b/stylesheet.css
@@ -81,8 +81,8 @@ a{
 }
 .about img{
   float:left;
-  width:50%;
-  height:50%;
+  width:100px;
+  height:100px;
 }
 .contact-wrapper{
   text-align:center;
