--- a/stylesheet.css
+++ b/stylesheet.css
@@ -71,6 +71,7 @@ a{
 .pm{
   width:50%;
   float:left;
+  padding-bottom:30px;
 }
 .skill-title{
   font-weight:bold;
@@ -78,6 +79,7 @@ a{
 }
 .about {
   text-align:center;
+  height:500px;
 }
 .about img{
   float:left;
