--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,38 +1,45 @@
 @charset "UTF-8";
 
 html{
-  font-size:100%;
   color:black;
-  max-width:1170px;
-  width:100%;
-  
+  padding: 0 15px;
+  height:auto;
 
+
+
+}
+
+ul {
+  list-style: none;
 }
 *{
   box-sizing:border-box;
 }
-ul {
-  list-style: none;
-}
-
 header{
   height:65px;
-  border-bottom:1px solid gray;
+  width:100%;
   font-weight:bold;
+  position:fixed;
+  top:0;
+  z-index:10;
+  background-color:#FFFFCC;
+
 }
 a{
   text-decoration:none;
   font-size:30px;
   text-height:65px;
-
 }
+
 .header-left{
   float:left;
 }
 .header-right{
   float:right;
+  margin-right:25px;
+  line-height:65px;
 }
-.header-right li{
+.header-right a{
   float:left;
   margin-right:10px;
   font-size:0.875rem;
@@ -45,9 +52,11 @@ a{
 
 .works-wrapper{
   text-align:center;
-  background-color:#f7f7f7;
+  background-color:gray;
   margin:0 auto;
-  height:500px;
+
+
+
 }
 .image{
   width:33%;
@@ -58,37 +67,46 @@ a{
   float:left;
 }
 .skill-wrapper{
-  padding-top:100px;
   text-align:center;
+  padding:50px;
+
   }
 .skill h1{
   text-align:center;
 }
 .pm img{
   float:left;
+  width:75px;
+  padding:20px 0;
+  margin-bottom:35px;
+}
+.pm ul{
+  width:90%;
 
+  padding:15px;
+  width:100%;
 }
 .pm{
   width:50%;
   float:left;
-  padding-bottom:30px;
 }
 .skill-title{
   font-weight:bold;
   padding-bottom:10px;
+  margin:0 auto;
 }
 .about {
   text-align:center;
-  height:500px;
+  padding-top:100px;
+
 }
 .about img{
   float:left;
-  width:100px;
-  height:100px;
+  padding:20px;
 }
+
 .contact-wrapper{
   text-align:center;
-  height:300px;
 }
 .contact ul{
   font-size:0.875rem;
@@ -109,10 +127,22 @@ footer{
   background-color:#333333;
   color:gray;
   text-align:center;
-  height:100px;
+  height:50px;
 
 }
 footer p{
   font-size:0.875rem;
   line-height:50px;
+}
+@media (max-width:1000px)  {
+  .image{
+    width:50%;
+
+  }
+  .image-last{
+    width:50%;
+  }
+  .pm{
+   width:100%;
+    }
 }
